--- a/src/main/resources/assets/packedup/lang/en_us.json
+++ b/src/main/resources/assets/packedup/lang/en_us.json
@@ -5,5 +5,7 @@
   "item.packedup.silverbackpack": "Silver Backpack",
   "item.packedup.goldbackpack": "Golden Backpack",
   "item.packedup.diamondbackpack": "Diamond Backpack",
-  "item.packedup.obsidianbackpack": "Obsidian Backpack"
+  "item.packedup.obsidianbackpack": "Obsidian Backpack",
+  "gui.packedup.title": "Backpack Name",
+  "gui.packedup.name": "Backpack Name:"
 }
