--- a/src/main/resources/assets/packedup/lang/nl_NL.lang
+++ b/src/main/resources/assets/packedup/lang/nl_NL.lang
@@ -5,3 +5,4 @@ item.packedup:silverbackpack.name=Zilveren Rugzak
 item.packedup:goldbackpack.name=Gouden Rugzak
 item.packedup:diamondbackpack.name=Diamanten Rugzak
 item.packedup:obsidianbackpack.name=Obsidiaan Rugzak
+gui.packedup.name=Rugzak Naam:
