--- a/src/main/resources/assets/packedup/lang/en_US.lang
+++ b/src/main/resources/assets/packedup/lang/en_US.lang
@@ -5,3 +5,4 @@ item.packedup:silverbackpack.name=Silver Backpack
 item.packedup:goldbackpack.name=Golden Backpack
 item.packedup:diamondbackpack.name=Diamond Backpack
 item.packedup:obsidianbackpack.name=Obsidian Backpack
+gui.packedup.name=Backpack Name:
