add translations for the keybind

--- a/src/main/resources/assets/packedup/lang/en_us.json
+++ b/src/main/resources/assets/packedup/lang/en_us.json
@@ -7,5 +7,7 @@
   "item.packedup.diamondbackpack": "Diamond Backpack",
   "item.packedup.obsidianbackpack": "Obsidian Backpack",
   "gui.packedup.title": "Backpack Name",
-  "gui.packedup.name": "Backpack Name:"
+  "gui.packedup.name": "Backpack Name:",
+  "keys.category.packedup": "Packed Up",
+  "keys.packedup.openbag": "Open Backpack"
 }
