--- a/src/main/resources/assets/packedup/lang/de_at.json
+++ b/src/main/resources/assets/packedup/lang/de_at.json
@@ -7,5 +7,7 @@
   "item.packedup.diamondbackpack": "Diamantrucksack",
   "item.packedup.obsidianbackpack": "Obsidianrucksack",
   "gui.packedup.title": "Name des Rucksacks",
-  "gui.packedup.name": "Name des Rucksacks:"
+  "gui.packedup.name": "Name des Rucksacks:",
+  "keys.category.packedup": "Packed Up",
+  "keys.packedup.openbag": "Rucksack Öffnen"
 }
