--- a/src/main/resources/assets/packedup/lang/de_AT.lang
+++ b/src/main/resources/assets/packedup/lang/de_AT.lang
@@ -6,3 +6,5 @@ item.packedup:goldbackpack.name=Goldrucksack
 item.packedup:diamondbackpack.name=Diamantrucksack
 item.packedup:obsidianbackpack.name=Obsidianrucksack
 gui.packedup.name=Name des Rucksacks:
+keys.category.packedup=Packed Up
+keys.packedup.openbag=Rucksack Öffnen
