--- a/src/main/resources/assets/packedup/lang/nl_NL.lang
+++ b/src/main/resources/assets/packedup/lang/nl_NL.lang
@@ -6,3 +6,5 @@ item.packedup:goldbackpack.name=Gouden Rugzak
 item.packedup:diamondbackpack.name=Diamanten Rugzak
 item.packedup:obsidianbackpack.name=Obsidiaan Rugzak
 gui.packedup.name=Rugzak Naam:
+keys.category.packedup=Packed Up
+keys.packedup.openbag=Rugzak Openen
