--- a/src/main/resources/assets/packedup/lang/ru_ru.json
+++ b/src/main/resources/assets/packedup/lang/ru_ru.json
@@ -8,6 +8,6 @@
   "item.packedup.obsidianbackpack": "Обсидиановый рюкзак",
   "gui.packedup.title": "Имя рюкзака",
   "gui.packedup.name": "Имя рюкзака:",
-  "keys.category.packedup": "собранный",
+  "keys.category.packedup": "Packed Up",
   "keys.packedup.openbag": "Открыть рюкзак"
 }
