--- a/src/main/resources/assets/packedup/lang/pl_pl.json
+++ b/src/main/resources/assets/packedup/lang/pl_pl.json
@@ -8,4 +8,6 @@
   "item.packedup.obsidianbackpack": "Obsydianowy Plecak",
   "gui.packedup.title": "Nazwij plecak",
   "gui.packedup.name": "Nazwa plecaka:"
+  "keys.category.packedup": "Packed Up",
+  "keys.packedup.openbag": "Otwórz plecak"
 }
