--- a/src/main/resources/assets/packedup/lang/en_us.json
+++ b/src/main/resources/assets/packedup/lang/en_us.json
@@ -9,5 +9,8 @@
   "gui.packedup.title": "Backpack Name",
   "gui.packedup.name": "Backpack Name:",
   "keys.category.packedup": "Packed Up",
-  "keys.packedup.openbag": "Open Backpack"
+  "keys.packedup.openbag": "Open Backpack",
+  "packedup.backpacks.info.one": "Can store %d item stacks",
+  "packedup.backpacks.info.two": "Can be opened with '%s'",
+  "packedup.backpacks.info.inventory_index": "Inventory id: %d"
 }
