--- a/src/main/resources/assets/packedup/lang/en_US.lang
+++ b/src/main/resources/assets/packedup/lang/en_US.lang
@@ -8,3 +8,6 @@ item.packedup:obsidianbackpack.name=Obsidian Backpack
 gui.packedup.name=Backpack Name:
 keys.category.packedup=Packed Up
 keys.packedup.openbag=Open Backpack
+packedup.backpacks.info.one=Can store %d item stacks
+packedup.backpacks.info.two=Can be opened with '%s'
+packedup.backpacks.info.inventory_index=Inventory id: %d
