--- a/src/main/resources/assets/packedup/lang/pl_PL.lang
+++ b/src/main/resources/assets/packedup/lang/pl_PL.lang
@@ -6,3 +6,5 @@ item.packedup:goldbackpack.name=Złoty plecak
 item.packedup:diamondbackpack.name=Diamentowy Plecak
 item.packedup:obsidianbackpack.name=Obsydianowy Plecak
 gui.packedup.name=Nazwa plecaka:
+keys.category.packedup=Packed Up
+keys.packedup.openbag=Otwórz plecak
