Move everything over to Core lib and Config lib Allow specifying rows and columns per backpack

--- a/src/main/resources/assets/packedup/lang/de_AT.lang
+++ b/src/main/resources/assets/packedup/lang/de_AT.lang
@@ -1,10 +1,10 @@
-item.packedup:basicbackpack.name=Rucksack
-item.packedup:ironbackpack.name=Eisenrucksack
-item.packedup:copperbackpack.name=Kupferrucksack
-item.packedup:silverbackpack.name=Silberrucksack
-item.packedup:goldbackpack.name=Goldrucksack
-item.packedup:diamondbackpack.name=Diamantrucksack
-item.packedup:obsidianbackpack.name=Obsidianrucksack
+item.packedup.basicbackpack.name=Rucksack
+item.packedup.ironbackpack.name=Eisenrucksack
+item.packedup.copperbackpack.name=Kupferrucksack
+item.packedup.silverbackpack.name=Silberrucksack
+item.packedup.goldbackpack.name=Goldrucksack
+item.packedup.diamondbackpack.name=Diamantrucksack
+item.packedup.obsidianbackpack.name=Obsidianrucksack
 gui.packedup.name=Name des Rucksacks:
 keys.category.packedup=Packed Up
 keys.packedup.openbag=Rucksack Öffnen
