--- a/src/main/resources/assets/packedup/lang/es_MX.lang
+++ b/src/main/resources/assets/packedup/lang/es_MX.lang
@@ -1,8 +1,8 @@
-item.packedup:basicbackpack.name=Mochila de Cuero
-item.packedup:ironbackpack.name=Mochila de Hierro
-item.packedup:copperbackpack.name=Mochila de Cobre
-item.packedup:silverbackpack.name=Mochila de Plata
-item.packedup:goldbackpack.name=Mochila de Oro
-item.packedup:diamondbackpack.name=Mochila de Diamante
-item.packedup:obsidianbackpack.name=Mochila de Obsidiana
+item.packedup.basicbackpack.name=Mochila de Cuero
+item.packedup.ironbackpack.name=Mochila de Hierro
+item.packedup.copperbackpack.name=Mochila de Cobre
+item.packedup.silverbackpack.name=Mochila de Plata
+item.packedup.goldbackpack.name=Mochila de Oro
+item.packedup.diamondbackpack.name=Mochila de Diamante
+item.packedup.obsidianbackpack.name=Mochila de Obsidiana
 gui.packedup.name=Nombre de la Mochila:
