Add a creative tab for the backpacks

--- a/src/main/resources/assets/packedup/lang/en_us.lang
+++ b/src/main/resources/assets/packedup/lang/en_us.lang
@@ -21,3 +21,4 @@ packedup.advancement.diamond.title=Gotta have that bling
 packedup.advancement.diamond.description=Craft a diamond backpack
 packedup.advancement.obsidian.title=The largest of them all
 packedup.advancement.obsidian.description=Craft an obsidian backpack
+itemGroup.packedup=Packed Up
