--- a/src/main/resources/assets/packedup/lang/en_us.json
+++ b/src/main/resources/assets/packedup/lang/en_us.json
@@ -22,5 +22,6 @@
   "packedup.advancement.diamond.title": "Gotta have that bling",
   "packedup.advancement.diamond.description": "Craft a diamond backpack",
   "packedup.advancement.obsidian.title": "The largest of them all",
-  "packedup.advancement.obsidian.description": "Craft an obsidian backpack"
+  "packedup.advancement.obsidian.description": "Craft an obsidian backpack",
+  "itemGroup.packedup": "Packed Up"
 }
