--- a/src/main/resources/assets/packedup/lang/ru_ru.json
+++ b/src/main/resources/assets/packedup/lang/ru_ru.json
@@ -1,13 +1,28 @@
 {
-  "item.packedup.basicbackpack": "Рюкзак",
-  "item.packedup.ironbackpack": "Железный рюкзак",
-  "item.packedup.copperbackpack": "Медный рюкзак",
-  "item.packedup.silverbackpack": "Серебряный рюкзак",
-  "item.packedup.goldbackpack": "Золотой рюкзак",
-  "item.packedup.diamondbackpack": "Алмазный рюкзак",
-  "item.packedup.obsidianbackpack": "Обсидиановый рюкзак",
-  "gui.packedup.title": "Имя рюкзака",
-  "gui.packedup.name": "Имя рюкзака:",
-  "keys.category.packedup": "Packed Up",
-  "keys.packedup.openbag": "Открыть рюкзак"
+  "packedup.item.diamondbackpack": "Алмазный рюкзак",
+  "packedup.advancement.iron_or_copper_backpack.description": "Создать железный или медный рюкзак",
+  "packedup.item.ironbackpack": "Железный рюкзак",
+  "packedup.backpacks.info.two": "Открывается на '%s'",
+  "packedup.advancement.silver_or_gold_backpack.description": "Создать серебряный или золотой рюкзак",
+  "packedup": "Packed Up",
+  "packedup.advancement.diamond_backpack.description": "Создать алмазный рюкзак",
+  "packedup.item_group": "Packed Up",
+  "packedup.item.goldbackpack": "Золотой рюкзак",
+  "packedup.backpacks.info.one": "Слотов: %d",
+  "packedup.rename_screen.title": "Название рюкзака",
+  "packedup.item.silverbackpack": "Серебряный рюкзак",
+  "packedup.advancement.iron_or_copper_backpack.title": "Больше — лучше",
+  "packedup.backpacks.info.inventory_index": "Инвентарный индекс: %d",
+  "packedup.advancement.diamond_backpack.title": "Обожаю этот блеск",
+  "packedup.item.basicbackpack": "Рюкзак",
+  "packedup.item.copperbackpack": "Медный рюкзак",
+  "packedup.keys.openbag": "Открыть рюкзак",
+  "packedup.rename_screen.name_field": "Название рюкзака:",
+  "packedup.keys.category": "Packed Up",
+  "packedup.advancement.basic_backpack.title": "Packing Up!",
+  "packedup.advancement.silver_or_gold_backpack.title": "Рюкзак от Gucci",
+  "packedup.advancement.obsidian_backpack.title": "Наибольший из всех",
+  "packedup.advancement.basic_backpack.description": "Создать рюкзак",
+  "packedup.item.obsidianbackpack": "Обсидиановый рюкзак",
+  "packedup.advancement.obsidian_backpack.description": "Создать обсидиановый рюкзак"
 }
